--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -1,5 +1,5 @@
 {{- $secret := lookup "v1" "Secret" .Release.Namespace .Values.image.secret.name -}}
-{{- if not $secret -}}
+{{- if and (not $secret) .Values.image.secret.name -}}
 apiVersion: v1
 kind: Secret
 type: kubernetes.io/dockerconfigjson
