--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,14 +1,14 @@
 apiVersion: v2
-name: helm-template
+name: helm-chart
 version: 1.0.0
-description: Helm chart template
+description: A simple helm chart template
 type: application
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.16.0"
+appVersion: "1.0.0"
 
 maintainers: # (optional)
   - name: yaxin
