--- a/templates/certmanager.yaml
+++ b/templates/certmanager.yaml
@@ -6,23 +6,7 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-http01-staging
-spec:
-  acme:
-    email: {{ .Values.certmanager.email }}
-    privateKeySecretRef:
-      name: letsencrypt-staging
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
-    solvers:
-    - http01:
-        ingress:
-          class: {{ .Values.certmanager.ingressClassName }}
-      selector: {}
----
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: letsencrypt-http01-prod
+  name: {{ .Values.certmanager.clusterIssuerName }}
 spec:
   acme:
     email: {{ .Values.certmanager.email }}
@@ -31,7 +15,9 @@ spec:
     server: https://acme-v02.api.letsencrypt.org/directory
     solvers:
     - http01:
+        {{- if .Values.certmanager.ingressClassName -}}
         ingress:
           class: {{ .Values.certmanager.ingressClassName }}
+        {{- end -}}
       selector: {}
 {{- end -}}
