--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -1,6 +1,11 @@
+{{- if .Values.appEnv -}}
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "fullname" . }}
-data: {}
+  name: {{ include "appEnvConfigMapName" . }}
+{{- with .Values.appEnv }}
+data:
+  {{- toYaml . | nindent 2 }}
+{{- end }}
+{{- end -}}
