--- a/templates/service.yml
+++ b/templates/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "fullname" . }}
+  name: {{ include "name" . }}
   labels:
     {{- include "labels" . | nindent 4 }}
 spec:
